objects/GenAIGtwyRequestLLM__dll.object
<CustomObject>
    <fields>
        <fullName>KQ_id__c</fullName>
        <label>KQ_id</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KQ_parent__c</fullName>
        <label>KQ_parent</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cloud__c</fullName>
        <label>cloud</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>endpoint__c</fullName>
        <label>endpoint</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>feature__c</fullName>
        <label>feature</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>genAILLM__c</fullName>
        <label>genAILLM</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>id__c</fullName>
        <label>id</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>llmCallLatency__c</fullName>
        <label>llmCallLatency</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>llmCallStatus__c</fullName>
        <label>llmCallStatus</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>llmErrorTrace__c</fullName>
        <label>llmErrorTrace</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>metadata__c</fullName>
        <label>metadata</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>parent__c</fullName>
        <label>parent</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>region__c</fullName>
        <label>region</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>salesforceOrgId__c</fullName>
        <label>salesforceOrgId</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>timestamp__c</fullName>
        <label>timestamp</label>
        <type>DateTime</type>
    </fields>
</CustomObject>